# SelfLauncher

./: .gitignore  CMakeLists.txt  README.md  genhashheaders.py  param.sfx  stubs.yml
SLKernel/: CMakeCache.txt  CMakeLists.txt  SLKernel.emd  SLKernel.yml
SLKernel/src/: main.c
common/: SLKernel.h
include/: common.h  print.h  settings.h  sl_locale.h  sl_plugin.h  sl_settings.h  utils.h
include/pages/: file_browser.h  page.h
libScePafPreload/: CMakeLists.txt
libScePafPreload/src/: main.c
resource/: sl_plugin.xml
resource/file/: sl_settings.xml
resource/locale/: en.rcs  en.xml
src/: main.cpp  paf_runtime.cpp  settings.cpp  utils.cpp
src/pages/: file_browser.cpp  page.cpp
